# taller-marvel-capcom

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Lala.cpp  Lala.h  README.md  configs.json  defaultConfigs.json  main.cpp  taller-marvel-capcom-16log
Animations/: Animation.cpp  Animation.h  CaptainAmericaCrowchedDownAnimation.cpp  CaptainAmericaCrowchedDownAnimation.h  CaptainAmericaEnteringAnimation.h  CaptainAmericaJumpAnimation.cpp  CaptainAmericaJumpAnimation.h  CaptainAmericaStillAnimation.cpp  CaptainAmericaStillAnimation.h  CaptainAmericaWalkAnimation.cpp  CaptainAmericaWalkAnimation.h  CaptainAmericaWalkBackwardsAnimation.cpp  CaptainAmericaWalkBackwardsAnimation.h  CaptainAmericaWalkFowardAnimation.cpp  CaptainAmericaWalkFowardAnimation.h  ChunLiCrowchedDownAnimation.cpp  ChunLiCrowchedDownAnimation.h  ChunLiEnteringAnimation.h  ChunLiJumpAnimation.h  ChunLiStillAnimation.cpp  ChunLiStillAnimation.h  ChunLiWalkBackwadsAnimation.h  ChunLiWalkFowardAnimation.cpp  ChunLiWalkFowardAnimation.h  NotFoundAnimation.cpp  NotFoundAnimation.h  SpiderManCrowchedDownAnimation.cpp  SpiderManCrowchedDownAnimation.h  SpiderManEnteringAnimation.h  SpiderManJumpAnimation.cpp  SpiderManJumpAnimation.h  SpiderManStillAnimation.cpp  SpiderManStillAnimation.h  SpiderManWalkAnimation.cpp  SpiderManWalkAnimation.h  VenomCrowchedDownAnimation.cpp  VenomCrowchedDownAnimation.h  VenomEnteringAnimation.h  VenomJumpAnimation.cpp  VenomJumpAnimation.h  (+6 more)
Animations/CaptainAmerica/: CaptainAmericaStillAnimation.cpp  CaptainAmericaStillAnimation.h
Animations/CaptainAmericaAnimations/: CaptainAmericaAirGuardAnimation.cpp  CaptainAmericaAirGuardAnimation.h  CaptainAmericaAirKickedAnimation.cpp  CaptainAmericaAirKickedAnimation.h  CaptainAmericaCrowchedDownAnimation.cpp  CaptainAmericaCrowchedDownAnimation.h  CaptainAmericaDownGuardAnimation.cpp  CaptainAmericaDownGuardAnimation.h  CaptainAmericaDownKickedAnimation.cpp  CaptainAmericaDownKickedAnimation.h  CaptainAmericaEnteringAnimation.cpp  CaptainAmericaEnteringAnimation.h  CaptainAmericaGrabAnimation.cpp  CaptainAmericaGrabAnimation.h  CaptainAmericaGrabLeftAnimation.cpp  CaptainAmericaGrabLeftAnimation.h  CaptainAmericaGrabRightAnimation.cpp  CaptainAmericaGrabRightAnimation.h  CaptainAmericaGrabbedAnimation.cpp  CaptainAmericaGrabbedAnimation.h  CaptainAmericaGrabbedImpactAnimation.cpp  CaptainAmericaGrabbedImpactAnimation.h  CaptainAmericaJumpAnimation.cpp  CaptainAmericaJumpAnimation.h  CaptainAmericaKickedAnimation.cpp  CaptainAmericaKickedAnimation.h  CaptainAmericaProjectileAnimation.cpp  CaptainAmericaProjectileAnimation.h  CaptainAmericaPunchAnimation.cpp  CaptainAmericaPunchAnimation.h  CaptainAmericaStandGuardAnimation.cpp  CaptainAmericaStandGuardAnimation.h  CaptainAmericaStandKickedAnimation.cpp  CaptainAmericaStandKickedAnimation.h  CaptainAmericaStillAnimation.cpp  CaptainAmericaStrongAirKickAnimation.cpp  CaptainAmericaStrongAirKickAnimation.h  CaptainAmericaStrongAirPunch.h  CaptainAmericaStrongAirPunchAnimation.cpp  CaptainAmericaStrongAirPunchAnimation.h  (+26 more)
Animations/China/: ChinaStillAnimation.cpp  ChinaStillAnimation.h  ChinaWalkAnimation.cpp  ChinaWalkAnimation.h
Animations/ChunLiAnimations/: ChunLiAirGuardAnimation.cpp  ChunLiAirGuardAnimation.h  ChunLiAirKickedAnimation.cpp  ChunLiAirKickedAnimation.h  ChunLiAmericaWeakDownPunchAnimation.cpp  ChunLiAmericaWeakDownPunchAnimation.h  ChunLiCrowchedDownAnimation.cpp  ChunLiCrowchedDownAnimation.h  ChunLiDownGuardAnimation.cpp  ChunLiDownGuardAnimation.h  ChunLiDownKickedAnimation.cpp  ChunLiDownKickedAnimation.h  ChunLiEnteringAnimation.cpp  ChunLiEnteringAnimation.h  ChunLiGrabAnimation.cpp  ChunLiGrabAnimation.h  ChunLiGrabLeftAnimation.cpp  ChunLiGrabLeftAnimation.h  ChunLiGrabRightAnimation.cpp  ChunLiGrabRightAnimation.h  ChunLiGrabbedAnimation.cpp  ChunLiGrabbedAnimation.h  ChunLiGrabbedImpactAnimation.cpp  ChunLiGrabbedImpactAnimation.h  ChunLiJumpAnimation.cpp  ChunLiJumpAnimation.h  ChunLiProjectileAnimation.cpp  ChunLiProjectileAnimation.h  ChunLiPunchAnimation.cpp  ChunLiPunchAnimation.h  ChunLiStandGuardAnimation.cpp  ChunLiStandGuardAnimation.h  ChunLiStandKickedAnimation.cpp  ChunLiStandKickedAnimation.h  ChunLiStillAnimation.cpp  ChunLiStillAnimation.h  ChunLiStrongAirKickAnimation.cpp  ChunLiStrongAirKickAnimation.h  ChunLiStrongAirPunchAnimation.cpp  ChunLiStrongAirPunchAnimation.h  (+32 more)
Animations/SpiderMan/: SpiderManJumpAnimation.cpp
Animations/SpiderManAnimations/: SpiderManAirGuardAnimation.cpp  SpiderManAirGuardAnimation.h  SpiderManAirKickedAniamtion.cpp  SpiderManAirKickedAniamtion.h  SpiderManAirKickedAnimation.cpp  SpiderManAirKickedAnimation.h  SpiderManCrowchedDownAnimation.cpp  SpiderManCrowchedDownAnimation.h  SpiderManDownGuardAnimation.cpp  SpiderManDownGuardAnimation.h  SpiderManDownKickedAnimation.cpp  SpiderManDownKickedAnimation.h  SpiderManEnteringAnimation.cpp  SpiderManEnteringAnimation.h  SpiderManGrabAnimation.cpp  SpiderManGrabAnimation.h  SpiderManGrabLeftAnimation.cpp  SpiderManGrabLeftAnimation.h  SpiderManGrabRightAnimation.cpp  SpiderManGrabRightAnimation.h  SpiderManGrabbedAnimation.cpp  SpiderManGrabbedAnimation.h  SpiderManGrabbedImpactAnimation.cpp  SpiderManGrabbedImpactAnimation.h  SpiderManJumpAnimation.cpp  SpiderManJumpAnimation.h  SpiderManKickedAnimation.cpp  SpiderManKickedAnimation.h  SpiderManProjectileAnimation.cpp  (+37 more)
Clases/: Background.cpp  Background.h  Character.cpp  Character.h  Controller.cpp  Controller.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  TextureManager.cpp
Client/: Client.cpp  Client.h
DefaultConfigs/: defaultConfigs.json
Json/: Battlefield.cpp  Battlefield.h  Character.cpp  Character.h  JsonBackground.cpp  JsonBackground.h  JsonCharacter.cpp  JsonCharacter.h  JsonConfigs.cpp  JsonConfigs.h  JsonDisconection.cpp  JsonDisconection.h  JsonGameObject_charSelect.cpp  JsonGameObject_charSelect.h  JsonParser.cpp  JsonParser.h  JsonSintax.cpp  JsonSintax.h
Server/: Server.cpp  Server.h
cmake/: FIndSDL2.cmake  FindSDL2_mixer.cmake  FindSDL_mixer.cmake
(+260 files in other folders)
